--- a/package.json
+++ b/package.json
@@ -3,17 +3,33 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "preinstall": "npm install -g coffee-script node-dev grunt grunt-cli pm2",
     "start": "node app.js"
   },
   "dependencies": {
     "express": "3.5.1",
     "jade": "*",
-    "less-middleware": "~0.1.15",
     "rest": "^1.0.3",
-    "xml2js": "^0.4.1"
+    "xml2js": "^0.4.1",
+    "render-options-injector": "*",
+    "coffee-script": "~1.7.1"
   },
   "devDependencies": {
-    "nodeunit": "^0.8.6",
-    "coffee-script": "^1.7.1"
+    "grunt": "^0.4.4",
+    "load-grunt-tasks": "*",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-nodeunit": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-coffee": "*",
+    "grunt-coffeelint": "*",
+    "grunt-contrib-less": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-imagemin": "*",
+    "grunt-contrib-cssmin": "*",
+    "node-dev": "~2.1.4",
+    "grunt-exec": "~0.4.2",
+    "grunt-concurrent": "~0.4.2"
   }
 }
