--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "preinstall": "npm install -g coffee-script node-dev grunt grunt-cli pm2",
-    "start": "node app.js"
+    "start": "coffee app.coffee"
   },
   "dependencies": {
     "express": "3.5.1",
@@ -12,9 +11,11 @@
     "rest": "^1.0.3",
     "xml2js": "^0.4.1",
     "render-options-injector": "*",
-    "coffee-script": "~1.7.1"
+    "coffee-script": "~1.7.1",
+    "pm2": "*"
   },
   "devDependencies": {
+    "grunt-cli": "*",
     "grunt": "^0.4.4",
     "load-grunt-tasks": "*",
     "grunt-contrib-clean": "*",
