--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "grunt-cli": "*",
-    "grunt": "^0.4.4",
+    "grunt": "~0.4.4",
     "load-grunt-tasks": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-jshint": "*",
