--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "coffee app.coffee"
   },
+  "main": "app.coffee",
   "dependencies": {
     "express": "3.5.1",
     "jade": "*",
