--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "render-options-injector": "*",
     "coffee-script": "~1.7.1",
     "less-middleware": "~0.2.1-beta",
-    "coffee-middleware": "~0.2.1"
+    "coffee-middleware": "~0.2.1",
+    "underscore": "^1.6.0",
+    "es6-promise": "^0.1.1"
   },
   "devDependencies": {
     "grunt-cli": "*",
