added formatting and table layout to prices

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "less-middleware": "~0.2.1-beta",
     "coffee-middleware": "~0.2.1",
     "underscore": "^1.6.0",
-    "es6-promise": "^0.1.1"
+    "es6-promise": "^0.1.1",
+    "numeral": "^1.5.3"
   },
   "devDependencies": {
     "grunt-cli": "*",
