--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: node_js
 node_js:
-  - "0.10"
+- '0.10'
+deploy:
+  provider: heroku
+  api_key:
+    secure: ZvZjugs5MoL7ApgzVhC29LuRrQhsTYq4XjQU5vQaGTqMFjf/RmbhO+dqLfTnjmsRTV5mcNLyMANpOpyhYfWJPlTUTYcIi0PXz2UwPNpAoZo60gqezHE6fQYJO20Kn8Bg16a6NvsAlC2aC7Bpq32LYR16NiU24pD3xCxaGckaGE4=
+  app: stormy-forest-7328
+  on:
+    repo: pgremo/market
