added application info footer

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "coffee-middleware": "~0.2.1",
     "underscore": "^1.6.0",
     "es6-promise": "^0.1.1",
-    "numeral": "^1.5.3"
+    "numeral": "^1.5.3",
+    "moment": "^2.5.1"
   },
   "devDependencies": {
     "grunt-cli": "*",
