--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "underscore": "^1.6.0",
     "numeral": "^1.5.3",
     "moment": "^2.5.1",
-    "es6-shim": "^0.10.1"
+    "es6-shim": "^0.10.1",
+    "node-schedule": "^0.1.13"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
