--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
   },
   "main": "app.coffee",
   "dependencies": {
-    "express": "3.5.1",
-    "jade": "*",
+    "express": "~4.0",
+    "jade": "~1.3",
     "rest": "~1.0.3",
     "xml2js": "~0.4.1",
-    "render-options-injector": "*",
     "coffee-script": "~1.7.1",
     "less-middleware": "~0.2.1-beta",
     "coffee-middleware": "~0.2.1",
@@ -30,15 +29,20 @@
     "numeral": "^1.5.3",
     "moment": "^2.5.1",
     "node-schedule": "^0.1.13",
-    "es6-shim": "^0.10.1"
+    "es6-shim": "^0.10.1",
+    "static-favicon": "^1.0.2",
+    "errorhandler": "^1.0.0",
+    "method-override": "^1.0.0",
+    "morgan": "^1.0.0",
+    "body-parser": "^1.0.2"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "load-grunt-tasks": "*",
-    "grunt-contrib-nodeunit": "*",
-    "grunt-contrib-coffee": "*",
-    "grunt-coffeelint": "*",
-    "grunt-exec": "~0.4.2"
+    "grunt": "~0.4.1",
+    "grunt-develop": "~0.3",
+    "grunt-contrib-watch": "~0.6",
+    "request": "~2.34",
+    "time-grunt": "~0.3",
+    "load-grunt-tasks": "~0.4"
   },
   "license": "MIT",
   "engines": {
