--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "coffee-script": "~1.7.1",
     "less-middleware": "~0.2.1-beta",
     "coffee-middleware": "~0.2.1",
-    "underscore": "^1.6.0",
+    "lodash": "^2.4.1",
     "numeral": "^1.5.3",
     "moment": "^2.5.1",
     "node-schedule": "^0.1.13",
@@ -37,12 +37,12 @@
     "body-parser": "^1.0.2"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-develop": "~0.3",
-    "grunt-contrib-watch": "~0.6",
-    "request": "~2.34",
-    "time-grunt": "~0.3",
-    "load-grunt-tasks": "~0.4"
+    "gulp-livereload": "^1.3.1",
+    "lodash": "^2.4.1",
+    "gulp-coffeelint": "^0.3.2",
+    "gulp": "^3.6.2",
+    "gulp-mocha": "^0.4.1",
+    "gulp-nodemon": "^1.0.2"
   },
   "license": "MIT",
   "engines": {
